Remove keys and updated Readme file

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,61 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <script
-            src="https://kit.fontawesome.com/d03b12fbde.js"
-            crossorigin="anonymous"
-        ></script>
+		<script
+			src="https://kit.fontawesome.com/xxxxxxxx.js"
+			crossorigin="anonymous"
+		></script>
 
-        <link
-            rel="preload"
-            as="image"
-            href="https://admin.gettpd.com/uploads/redsport-car-isolated.png"
-        />
+		<link
+			rel="preload"
+			as="image"
+			href="https://admin.gettpd.com/uploads/redsport-car-isolated.png"
+		/>
 
-        <link
-            rel="preload"
-            as="image"
-            href="https://admin.gettpd.com/uploads/drying-car-after-car-wash-0.jpg"
-        />
+		<link
+			rel="preload"
+			as="image"
+			href="https://admin.gettpd.com/uploads/drying-car-after-car-wash-0.jpg"
+		/>
 
-        <link
-            rel="preload"
-            as="image"
-            href="https://admin.gettpd.com/uploads/image6483441-4-0.jpeg"
-        />
-
-        <!-- Google Tag Manager -->
-        <script>
-            (function (w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({
-                    'gtm.start': new Date().getTime(),
-                    event: 'gtm.js',
-                });
-                var f = d.getElementsByTagName(s)[0],
-                    j = d.createElement(s),
-                    dl = l != 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-TB6B25P');
-        </script>
-        <!-- End Google Tag Manager -->
-    </head>
-    <body>
-        <noscript
-            ><iframe
-                src="//www.googletagmanager.com/ns.html?id=GTM-TB6B25P"
-                height="0"
-                width="0"
-                style="display: none; visibility: hidden"
-            ></iframe
-        ></noscript>
-        <div id="root"></div>
-        <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "4qGhX7bLTX");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
-    </body>
+		<link
+			rel="preload"
+			as="image"
+			href="https://admin.gettpd.com/uploads/image6483441-4-0.jpeg"
+		/>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
